# rsync

./: .dockerignore  .gitattributes  .gitignore  .lcovrc  AGENTS.md  ASYNC_SIGNATURE_IMPLEMENTATION.md  BATCHED_STAT_IMPLEMENTATION.md  BENCHMARK_QUICK_START.md  BENCHMARK_SUMMARY.md  BYTESIZE_COMPARISON_TABLE.md  BYTESIZE_EVALUATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE_SETUP.md  CURRENT_IMPLEMENTATION_DIAGNOSIS.md  Cargo.toml  Cross.toml  DEBUGGING_INTEROP.md  FEATURES.md  FEATURES_QUICK_REF.md  FEATURE_FLAGS_SUMMARY.md  HUMANTIME_API_COMPARISON.md  HUMANTIME_EVALUATION.md  PHASE1_IO_BENCHMARK_RESULTS.md  PROTOCOL_32_REQUIREMENTS.md  PROTOCOL_TIMING_RESOLUTION_PLAN.md  README.md  RSYNC_SIZE_CONVENTION.md  SECURITY.md  SESSION_SUMMARY.md  SUMMARY.md  TODO_ANALYSIS.md  TRACING_IMPLEMENTATION.md  UPSTREAM_PROTOCOL_FLOW.md  VALIDATION_REPORT.md  VALIDATION_SUMMARY.md  VERIFICATION.md  benchmark-results.txt  benchmark_results.csv  (+14 more)
crates/apple-fs/: Cargo.toml  README.md
crates/apple-fs/src/: apple_double.rs  lib.rs  resource_fork.rs
crates/apple-fs/tests/: apple_double_round_trip.rs
crates/bandwidth/: Cargo.toml  README.md  TEST_COVERAGE_SUMMARY.md
crates/bandwidth/src/: async_limiter.rs  lib.rs  limiter.rs  parse.rs  size_arg.rs
crates/bandwidth/tests/: bwlimit_comprehensive.rs  bwlimit_rate_limiting.rs  bwlimit_scenarios.rs  comprehensive_coverage.rs  kqueue_sleep_backend.rs  limiter_property.rs  parse_whitespace.rs
crates/batch/: Cargo.toml  README.md
crates/batch/src/: error.rs  format.rs  lib.rs  reader.rs  replay.rs  script.rs  tests.rs  writer.rs
crates/batch/tests/: batch_integration.rs
crates/branding/: Cargo.toml  README.md  build.rs
crates/branding/src/: generated.rs  lib.rs  validation.rs
crates/checksums/: Cargo.toml  README.md
crates/checksums/benches/: bandwidth_constrained.rs  checksum_mode_benchmark.rs  checksums_benchmark.rs  framing_overhead_benchmark.rs  md4_multibuffer_benchmark.rs  md5_multibuffer_benchmark.rs  parallel_benchmark.rs  pipelined_benchmark.rs
crates/checksums/src/: comprehensive_tests.rs  cpu_features.rs  crc32c.rs  lib.rs  parallel.rs  pipeline.rs  pipelined.rs  rolling.rs  simd_parity_tests.rs  simd_self_test.rs
crates/checksums/tests/: checksum_variants_upstream_compat.rs  comprehensive_tests.rs  md4_protocol_compat.rs  md4_tests.rs  md5_tests.rs  rolling_signed_byte_regression.rs  rolling_simd_parity.rs  rsync_rolling_compat.rs  simd_override.rs  strategy_integration.rs  xxh3_128_tests.rs  xxh64_tests.rs
crates/cli/: Cargo.toml  README.md
crates/cli/benches/: startup_benchmark.rs
crates/cli/src/: defaults.rs  frontend.rs  help.rs  lib.rs  out_format.rs  password.rs  platform.rs  server.rs  tests.rs
crates/cli/tests/: archive_flag_completeness.rs  archive_flag_ordering.rs  archive_mode.rs  argument_defaults_boolean.rs  argument_defaults_special.rs  argument_defaults_values.rs  argument_errors.rs  deprecated_option_aliases.rs  environment_variable_defaults.rs  feature_propagation.rs  lone_h_help.rs  mutually_exclusive_options.rs  option_combinations_delete.rs  option_combinations_flags.rs  option_precedence_tri_state.rs  option_validation_parity.rs  output_parity.rs  reflink_flag.rs  upstream_arg_fidelity.rs
crates/compress/: Cargo.toml  README.md
crates/compress/src/: algorithm.rs  common.rs  lib.rs  lz4.rs  skip_compress.rs  strategy.rs  zlib.rs  zstd.rs
crates/compress/tests/: algorithm_specific_tests.rs  comprehensive_coverage.rs  decoder_panic_freedom.rs  incompressible_data.rs  level_zero_compression.rs  lz4_compression.rs  roundtrip_property.rs  skip_compress_patterns.rs  strategy_integration.rs  streaming_and_edge_cases.rs  zlib_compression_levels.rs  zlib_ng_backend.rs  zstd_compression.rs
crates/core/: Cargo.toml  README.md  build.rs
crates/core/benches/: pip_6_end_to_end_parallel_vs_sequential.rs  transfer_benchmark.rs
crates/core/examples/: signal_handling.rs
crates/core/src/: bandwidth.rs  branding.rs  client.rs  exit_code.rs  fallback.rs  lib.rs  message.rs  remote_shell.rs  session.rs  test_utils.rs  timeout.rs  version.rs  workspace.rs
crates/core/tests/: client_daemon_interop.rs  client_integration.rs  compression_integration.rs  daemon_client_interop.rs  error_recovery.rs  error_recovery_permission_denied.rs  exit_code_comprehensive.rs  inc_recurse_stress.rs  incremental_recursion.rs  (+10 more)
crates/daemon/: Cargo.toml  DAEMON_TESTS_COMPLETE.md  DAEMON_TESTS_TODO.md  README.md  TESTS_PROGRESS.md
crates/embedding/: Cargo.toml  README.md
crates/engine/: Cargo.toml  README.md
crates/fast_io/: Cargo.toml  README.md
crates/filters/: Cargo.toml  README.md
crates/flist/: ARCHITECTURE.txt  BATCHED_STAT.md  COMPARISON.md  Cargo.toml  README.md  README_BATCHED_STAT.md
crates/logging/: Cargo.toml  QUICK_REFERENCE.md  README.md  TRACING.md
crates/match/: Cargo.toml
crates/matching/: Cargo.toml  README.md
crates/md5-simd/: Cargo.toml
crates/meta/: Cargo.toml  build.rs
crates/metadata/: Cargo.toml  README.md  build.rs
crates/platform/: Cargo.toml  README.md
crates/protocol/: Cargo.toml  README.md
crates/rsync_io/: Cargo.toml  README.md
crates/signature/: Cargo.toml  README.md
crates/test-support/: Cargo.toml  README.md
crates/transfer/: Cargo.toml  README.md
crates/transport/: Cargo.toml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: acl_xattr_wire.rs  auth_response.rs  batch_reader.rs  buffered_map.rs  bwlimit.rs  capability_flags.rs  daemon_greeting.rs  decompressor_zlib.rs  decompressor_zstd.rs  differential_flist.rs  differential_multiplex.rs  differential_outcome.rs  filter_differential.rs  filter_list_wire.rs  filter_rules_vs_upstream.rs  flist_entry_decode.rs  incremental_flist.rs  legacy_greeting.rs  multiplex_frame_parse.rs  ndx_codec.rs  parallel_receive_delta_adversarial.rs  protocol_wire.rs  rsyncd_conf.rs  simd_checksum_parity.rs  varint_decode.rs  vstring.rs  zlib_token_decode.rs
xtask/: Cargo.toml  gap_report_baseline.txt
xtask/src/: cli.rs  error.rs  main.rs  test_support.rs  util.rs  workspace.rs
xtask/tests/: main_cli.rs
(+5479 files in other folders)
