[package]
name = "oc-rsync"
version = "3.4.1-rust"
edition = "2024"
rust-version = "1.88"
authors = ["Ofer Chen <skewers.irises.3b@icloud.com>"]
license = "GPL-3.0-or-later"
description = "Pure-Rust implementation of the rsync client and daemon entrypoints installed as a single oc-rsync binary for side-by-side deployment"
repository = "https://github.com/oferchen/rsync"
publish = true
autobins = false

[[bin]]
name = "rsync"
path = "src/bin/rsync.rs"
required-features = ["legacy-binaries"]

[[bin]]
name = "rsyncd"
path = "src/bin/rsyncd.rs"
required-features = ["legacy-binaries"]

[[bin]]
name = "oc-rsync"
path = "src/bin/oc-rsync.rs"

[[bin]]
name = "oc-rsyncd"
path = "src/bin/oc-rsyncd.rs"
required-features = ["legacy-binaries"]

[features]
default = ["zstd", "lz4", "acl", "xattr", "iconv"]
legacy-binaries = []
sd-notify = ["oc-rsync-daemon/sd-notify"]
zstd = ["oc-rsync-core/zstd"]
lz4 = ["oc-rsync-core/lz4"]
acl = ["oc-rsync-cli/acl", "oc-rsync-core/acl"]
xattr = ["oc-rsync-cli/xattr", "oc-rsync-core/xattr"]
iconv = ["oc-rsync-core/iconv"]

[dependencies]
oc-rsync-cli = { path = "crates/cli" }
oc-rsync-daemon = { path = "crates/daemon" }
oc-rsync-core = { path = "crates/core" }

[dev-dependencies]
assert_cmd = "2.0"
oc-rsync-core = { path = "crates/core" }
libc = "0.2"

[target.'cfg(all(windows, target_env = "gnu"))'.dependencies]
oc-rsync-windows-gnu-eh = { path = "crates/windows-gnu-eh" }

[workspace]
members = [
    "crates/cli",
    "crates/bandwidth",
    "crates/checksums",
    "crates/core",
    "crates/daemon",
    "crates/embedding",
    "crates/engine",
    "crates/filters",
    "crates/logging",
    "crates/compress",
    "crates/meta",
    "crates/protocol",
    "crates/walk",
    "crates/transport",
    "crates/windows-gnu-eh",
    "xtask",
    "crates/apple-fs",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.88"
authors = ["Ofer Chen <skewers.irises.3b@icloud.com>"]
license = "GPL-3.0-or-later"
version = "3.4.1-rust"

[workspace.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[workspace.metadata.oc_rsync]
brand = "oc"
upstream_version = "3.4.1"
rust_version = "3.4.1-rust"
protocol = 32
client_bin = "oc-rsync"
daemon_bin = "oc-rsync"
daemon_wrapper_bin = "oc-rsyncd"
legacy_client_bin = "rsync"
legacy_daemon_bin = "rsyncd"
daemon_config_dir = "/etc/oc-rsyncd"
daemon_config = "/etc/oc-rsyncd/oc-rsyncd.conf"
daemon_secrets = "/etc/oc-rsyncd/oc-rsyncd.secrets"
legacy_daemon_config_dir = "/etc"
legacy_daemon_config = "/etc/rsyncd.conf"
legacy_daemon_secrets = "/etc/rsyncd.secrets"
source = "https://github.com/oferchen/rsync"
web_site = "https://rsync.samba.org/"

[workspace.metadata.oc_rsync.cross_compile]
linux = ["x86_64", "aarch64"]
macos = ["x86_64", "aarch64"]
windows = ["x86_64", "aarch64"]

[workspace.metadata.oc_rsync.cross_compile_matrix]
"linux-x86_64" = true
"linux-aarch64" = true
"darwin-x86_64" = true
"darwin-aarch64" = true
"windows-x86_64" = true
"windows-aarch64" = false
"windows-x86" = false

[package.metadata.deb]
name = "oc-rsync"
section = "utils"
priority = "optional"
maintainer = "Ofer Chen <skewers.irises.3b@icloud.com>"
depends = "libc6 (>= 2.34), libgcc-s1"
extended-description = "Pure-Rust implementation of the rsync-compatible client and daemon entrypoints installed as a single oc-rsync binary so it can coexist with the system rsync package without replacing it."
conflicts = []
replaces = []

assets = [
    ["target/dist/oc-rsync", "usr/bin/oc-rsync", "755"],
    ["LICENSE", "usr/share/doc/oc-rsync/LICENSE", "644"],
    ["packaging/systemd/oc-rsyncd.service", "/lib/systemd/system/oc-rsyncd.service", "644"],
    ["packaging/etc/oc-rsyncd/oc-rsyncd.conf", "/etc/oc-rsyncd/oc-rsyncd.conf", "644"],
    ["packaging/etc/oc-rsyncd/oc-rsyncd.secrets", "/etc/oc-rsyncd/oc-rsyncd.secrets", "600"],
    ["packaging/default/oc-rsyncd", "/etc/default/oc-rsyncd", "644"],
    ["packaging/examples/oc-rsyncd.conf", "usr/share/doc/oc-rsync/examples/oc-rsyncd.conf", "644"],
]
conf-files = [
    "etc/oc-rsyncd/oc-rsyncd.conf",
    "etc/oc-rsyncd/oc-rsyncd.secrets",
    "etc/default/oc-rsyncd",
]
maintainer-scripts = "packaging/deb"

[package.metadata.rpm]
package = "oc-rsync"
summary = "Rust implementation of the rsync-compatible client/daemon installed as a single oc-rsync binary"
assets = [
    { source = "target/dist/oc-rsync", dest = "/usr/bin/oc-rsync", mode = "0755" },
    { source = "packaging/systemd/oc-rsyncd.service", dest = "/usr/lib/systemd/system/oc-rsyncd.service", mode = "0644" },
    { source = "packaging/etc/oc-rsyncd/oc-rsyncd.conf", dest = "/etc/oc-rsyncd/oc-rsyncd.conf", mode = "0644", config = true },
    { source = "packaging/etc/oc-rsyncd/oc-rsyncd.secrets", dest = "/etc/oc-rsyncd/oc-rsyncd.secrets", mode = "0600", config = true },
    { source = "packaging/default/oc-rsyncd", dest = "/etc/default/oc-rsyncd", mode = "0644", config = true },
    { source = "packaging/examples/oc-rsyncd.conf", dest = "/usr/share/doc/oc-rsync/examples/oc-rsyncd.conf", mode = "0644" },
]

[package.metadata.rpm.files."../packaging/systemd/oc-rsyncd.service"]
path = "/usr/lib/systemd/system/oc-rsyncd.service"
mode = "0644"

[package.metadata.rpm.files."../packaging/etc/oc-rsyncd/oc-rsyncd.conf"]
path = "/etc/oc-rsyncd/oc-rsyncd.conf"
mode = "0644"

[package.metadata.rpm.files."../packaging/etc/oc-rsyncd/oc-rsyncd.secrets"]
path = "/etc/oc-rsyncd/oc-rsyncd.secrets"
mode = "0600"

[package.metadata.rpm.files."../packaging/default/oc-rsyncd"]
path = "/etc/default/oc-rsyncd"
mode = "0644"


[package.metadata.rpm.scripts]
post = '''
set -e

# oc-rsync installs dedicated oc-* binaries and deliberately avoids
# update-alternatives integration so the system rsync package remains untouched.
exit 0
'''
preun = '''
set -e

exit 0
'''
postun = '''
set -e

exit 0
'''

[package.metadata.rpm.cargo]
profile = "dist"
buildflags = ["--profile", "dist", "--bins"]

[package.metadata.rpm.targets]
"oc-rsync" = { path = "/usr/bin/oc-rsync", mode = "0755" }

[profile.dist]
inherits = "release"
lto = "thin"
codegen-units = 1
strip = "debuginfo"
