[package]
name = "bin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Pure-Rust implementation of the rsync client and daemon"
repository.workspace = true
publish = true
autobins = false

[[bin]]
name = "oc-rsync"
path = "src/bin/oc-rsync.rs"

[[bin]]
name = "dhat-profile"
path = "src/bin/dhat_profile.rs"
required-features = ["dhat-heap"]

[features]
default = ["zstd", "lz4", "acl", "xattr", "iconv"]
sd-notify = ["daemon/sd-notify"]
zstd = ["core/zstd"]
lz4 = ["core/lz4"]
acl = ["cli/acl", "core/acl"]
xattr = ["cli/xattr", "core/xattr"]
iconv = ["core/iconv"]
# Async runtime support - enables tokio-based async I/O throughout the codebase
async = ["daemon/async", "core/async"]
# Parallel file operations - enables rayon-based parallelism for checksum mode
parallel = ["cli/parallel"]
# Heap allocation profiling with dhat - use with profile.dhat
dhat-heap = ["dep:dhat"]

[dependencies]
cli = { path = "crates/cli", default-features = false }
daemon = { path = "crates/daemon", default-features = false }
core = { path = "crates/core", default-features = false }
mimalloc = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
core = { path = "crates/core" }
filetime = "0.2"
libc = "0.2"
tempfile = "3.10"

[dependencies.dhat]
workspace = true
optional = true

# Extra deps only for Windows + GNU
[target.'cfg(all(windows, target_env = "gnu"))'.dependencies]
windows-gnu-eh = { path = "crates/windows-gnu-eh" }

[workspace]
members = [
    "crates/cli",
    "crates/bandwidth",
    "crates/batch",
    "crates/branding",
    "crates/checksums",
    "crates/core",
    "crates/daemon",
    "crates/embedding",
    "crates/engine",
    "crates/filters",
    "crates/logging",
    "crates/logging-sink",
    "crates/match",
    "crates/compress",
    "crates/metadata",
    "crates/protocol",
    "crates/flist",
    "crates/rsync_io",
    "crates/signature",
    "crates/transfer",
    "crates/windows-gnu-eh",
    "xtask",
    "crates/apple-fs",
    "crates/md5-simd",
]
exclude = [
    "crates/protocol/fuzz",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.88"
authors = ["Ofer Chen <skewers.irises.3b@icloud.com>"]
license = "GPL-3.0-or-later"
version = "0.5.3"
repository = "https://github.com/oferchen/rsync"

[workspace.dependencies]
# High-performance memory allocator - 8-50% faster than system allocator
mimalloc = "0.1"
# Fast non-cryptographic hash for HashMap/HashSet - 2-5x faster for integer keys
rustc-hash = "2.1"
# Parallel directory walking - ~4x faster than walkdir
jwalk = "0.8"
# Cross-platform ACL support (Linux, macOS, FreeBSD)
exacl = "0.12"
# Async runtime - feature-gated for optional async support
tokio = { version = "1.45", features = ["rt-multi-thread", "io-util", "net", "fs", "sync", "time", "process", "macros"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
# Serialization framework - feature-gated for JSON config and data export
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Structured logging - feature-gated for instrumentation and diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Parallel computation - feature-gated for parallel file operations
rayon = "1.10"
# Concurrent hash map - for shared state across daemon sessions
dashmap = "6.1"
# Heap profiling - for allocation analysis with dhat-viewer
dhat = "0.3"

[workspace.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

# ============================================================================
# Build Profiles
# ============================================================================

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[profile.dhat]
inherits = "release"
debug = true
strip = false

# ============================================================================
# Workspace Metadata
# ============================================================================

[workspace.metadata.oc_rsync]
brand = "oc"
upstream_version = "3.4.1"
rust_version = "0.5.3"
protocol = 32
client_bin = "oc-rsync"
daemon_bin = "oc-rsync"
legacy_client_bin = "rsync"
legacy_daemon_bin = "rsync"
daemon_config_dir = "/etc/oc-rsyncd"
daemon_config = "/etc/oc-rsyncd/oc-rsyncd.conf"
daemon_secrets = "/etc/oc-rsyncd/oc-rsyncd.secrets"
legacy_daemon_config_dir = "/etc"
legacy_daemon_config = "/etc/rsyncd.conf"
legacy_daemon_secrets = "/etc/rsyncd.secrets"
source = "https://github.com/oferchen/rsync"

[workspace.metadata.oc_rsync.cross_compile]
linux = ["x86_64", "aarch64"]
macos = ["x86_64", "aarch64"]
windows = ["x86_64"]

[workspace.metadata.oc_rsync.cross_compile_matrix]
"linux-x86_64-musl" = true
"linux-aarch64-musl" = true
"linux-x86_64-gnu" = true
"linux-aarch64-gnu" = true
"darwin-x86_64" = true
"darwin-aarch64" = true
"windows-x86_64" = true
"windows-x86" = false

[package.metadata.deb]
name = "oc-rsync"
section = "utils"
priority = "optional"
maintainer = "Ofer Chen <skewers.irises.3b@icloud.com>"
depends = "libc6 (>= 2.34), libgcc-s1"
extended-description = "Pure-Rust implementation of the rsync-compatible client and daemon"
conflicts = []
replaces = []

assets = [
    ["target/dist/oc-rsync", "usr/bin/oc-rsync", "755"],
    ["LICENSE", "usr/share/doc/oc-rsync/LICENSE", "644"],
    ["packaging/systemd/oc-rsyncd.service", "/lib/systemd/system/oc-rsyncd.service", "644"],
    ["packaging/etc/oc-rsyncd/oc-rsyncd.conf", "/etc/oc-rsyncd/oc-rsyncd.conf", "644"],
    ["packaging/etc/oc-rsyncd/oc-rsyncd.secrets", "/etc/oc-rsyncd/oc-rsyncd.secrets", "600"],
    ["packaging/default/oc-rsyncd", "/etc/default/oc-rsyncd", "644"],
    ["packaging/examples/oc-rsyncd.conf", "usr/share/doc/oc-rsync/examples/oc-rsyncd.conf", "644"],
]
conf-files = [
    "etc/oc-rsyncd/oc-rsyncd.conf",
    "etc/oc-rsyncd/oc-rsyncd.secrets",
    "etc/default/oc-rsyncd",
]
maintainer-scripts = "packaging/deb"

[package.metadata.deb.variants.focal]
depends = "libc6 (>= 2.31), libgcc-s1"

# RPM package configuration for cargo-generate-rpm
# See: https://github.com/cat-in-136/cargo-generate-rpm
[package.metadata.generate-rpm]
name = "oc-rsync"
summary = "Rust implementation of the rsync-compatible client/daemon"
assets = [
    { source = "target/release/oc-rsync", dest = "/usr/bin/oc-rsync", mode = "755" },
    { source = "packaging/systemd/oc-rsyncd.service", dest = "/usr/lib/systemd/system/oc-rsyncd.service", mode = "644" },
    { source = "packaging/etc/oc-rsyncd/oc-rsyncd.conf", dest = "/etc/oc-rsyncd/oc-rsyncd.conf", mode = "644", config = true },
    { source = "packaging/etc/oc-rsyncd/oc-rsyncd.secrets", dest = "/etc/oc-rsyncd/oc-rsyncd.secrets", mode = "600", config = true },
    { source = "packaging/default/oc-rsyncd", dest = "/etc/default/oc-rsyncd", mode = "644", config = true },
    { source = "packaging/examples/oc-rsyncd.conf", dest = "/usr/share/doc/oc-rsync/examples/oc-rsyncd.conf", mode = "644", doc = true },
]
post_install_script = "#!/bin/sh\nset -e\n# oc-rsync installs dedicated oc-* binaries and deliberately avoids\n# update-alternatives integration so the system rsync package remains untouched.\nexit 0"
pre_uninstall_script = "#!/bin/sh\nset -e\nexit 0"
post_uninstall_script = "#!/bin/sh\nset -e\nexit 0"

[package.metadata.generate-rpm.requires]
glibc = "*"

[profile.dist]
inherits = "release"
opt-level = "z"           # Optimize for size
lto = "fat"               # Full link-time optimization
codegen-units = 1         # Single codegen unit for maximum optimization
panic = "abort"           # Remove unwinding code (~10% smaller)
strip = "symbols"         # Strip symbols from binary

# Optimize dependencies for size in dist builds
[profile.dist.package."*"]
opt-level = "z"
codegen-units = 16        # Faster dependency compilation
strip = "symbols"
