[package]
name = "oc-rsync-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
rust-version = "1.88"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
tempfile = "3.15"

[dependencies.protocol]
path = "../crates/protocol"

[dependencies.daemon]
path = "../crates/daemon"
default-features = false

[dependencies.checksums]
path = "../crates/checksums"

[dependencies.filters]
path = "../crates/filters"

[dependencies.compress]
path = "../crates/compress"
default-features = false
features = ["zstd", "zlib-ng"]

[dependencies.batch]
path = "../crates/batch"

[dependencies.metadata]
path = "../crates/metadata"

[[bin]]
name = "protocol_wire"
path = "fuzz_targets/protocol_wire.rs"
test = false
doc = false
bench = false

[[bin]]
name = "simd_checksum_parity"
path = "fuzz_targets/simd_checksum_parity.rs"
test = false
doc = false
bench = false

[[bin]]
name = "filter_differential"
path = "fuzz_targets/filter_differential.rs"
test = false
doc = false
bench = false

[[bin]]
name = "filter_rules_vs_upstream"
path = "fuzz_targets/filter_rules_vs_upstream.rs"
test = false
doc = false
bench = false

[[bin]]
name = "multiplex_frame_parse"
path = "fuzz_targets/multiplex_frame_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "flist_entry_decode"
path = "fuzz_targets/flist_entry_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decompressor_zstd"
path = "fuzz_targets/decompressor_zstd.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decompressor_zlib"
path = "fuzz_targets/decompressor_zlib.rs"
test = false
doc = false
bench = false

[[bin]]
name = "filter_list_wire"
path = "fuzz_targets/filter_list_wire.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ndx_codec"
path = "fuzz_targets/ndx_codec.rs"
test = false
doc = false
bench = false

[[bin]]
name = "batch_reader"
path = "fuzz_targets/batch_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "acl_xattr_wire"
path = "fuzz_targets/acl_xattr_wire.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rsyncd_conf"
path = "fuzz_targets/rsyncd_conf.rs"
test = false
doc = false
bench = false

[[bin]]
name = "auth_response"
path = "fuzz_targets/auth_response.rs"
test = false
doc = false
bench = false

[[bin]]
name = "incremental_flist"
path = "fuzz_targets/incremental_flist.rs"
test = false
doc = false
bench = false

[[bin]]
name = "legacy_greeting"
path = "fuzz_targets/legacy_greeting.rs"
test = false
doc = false
bench = false

# Standalone workspace - excluded from the root workspace so that
# `cargo build` does not pull libfuzzer-sys into ordinary builds.
[workspace]
