[package]
name = "apple-fs"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
libc = "0.2"
nix = { version = "0.31", default-features = false, features = ["fs"] }

[target.'cfg(target_os = "macos")'.dependencies]
unicode-normalization = "0.1"
# Safe wrapper for getxattr(2)/setxattr(2). Used to access the macOS-native
# `com.apple.ResourceFork` and `com.apple.FinderInfo` extended attributes
# without introducing unsafe FFI inside this crate (per workspace policy).
xattr = "1.6"

[dev-dependencies]
tempfile = "3.15"
