[package]
name = "bandwidth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Bandwidth parsing and pacing utilities for the Rust rsync implementation"
repository.workspace = true
readme = "README.md"
publish = false

[package.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = []
test-support = []

[dependencies]
memchr = "2.7"

[dev-dependencies]
proptest = "1.8"
